--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,2 +1,15 @@
+@import "compass/reset";
 @import "compass/css3";
+@import "compass/layout";
 @import "colors";
+
+body {
+    background: image-url('/assets/background-tile.jpg');
+}
+
+#canvas {
+    width: 100%;
+    height: 100%;
+    background: image-url('/assets/background-top.jpg') repeat-x;
+    @include stretch;
+}
