--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,8 @@
   %body
     %section#canvas
       %section#header
-        %h1=link_to "coshx", :root
-
+        %h1=link_to "coshx", :root, :id => "logo"
+      #spacer
       %section#content
         = yield
       %section#footer
