--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,22 @@
 %html
   %head
     %title Coshx Labs
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
     %section#canvas
-      %section#header
+      %header
         %h1=link_to "coshx", :root, :id => "logo"
+
+        %nav
+          %ul
+            %li=link_to "services", :services
+            %li=link_to "our work", :work
+            %li=link_to "our blog", :blog
+            %li=link_to "about", :about
       #spacer
       %section#content
         = yield
-      %section#footer
+      %footer
