--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -5,13 +5,20 @@
 
 body {
     background: image-url('/assets/background-tile.jpg');
+    background-position: 0px 141px;
 }
 
 #canvas {
     width: 100%;
     height: 100%;
-    background: image-url('/assets/background-top.jpg') repeat-x;
-    @include stretch;
+
+}
+
+#header-wrapper {
+    background: image-url('/assets/curve.png') repeat-x;
+    background-position: 0px $header-height;
+    background-color: $gray;
+    width: 100%;
 }
 
 header {
@@ -23,6 +30,12 @@ header {
     }
 }
 
+#content-wrapper {
+    background: image-url('/assets/background-top.jpg') repeat-x;
+    height: 700px;
+    
+}
+
 #content {
     @include centered;
 }
@@ -32,9 +45,7 @@ footer {
 }
 
 #spacer {
-    background: image-url('/assets/curve.png') repeat-x;
-    height: 30px;
-    width: 100%;
+
 }
 
 nav {
