adds processing library and replaces sqlite3 with postgresql

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Coshx Labs
+    %meta{:name => "google-site-verification", :content => "GG9HzTQhQZszRRYo-W_el_Dh1LQs-3SQOuCzZS88FvI"}
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
@@ -12,7 +13,6 @@
         %header
           #header-content
           %h1=link_to "coshx", :root, :id => "logo"
-
           %nav
             %ul
               %li=link_to "services", :services
