--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,3 +24,10 @@
           = yield
       #footer-wrapper
         %footer
+          %section#contact
+            %h3 Contact Us
+          %section#links
+            %h3 Links
+          %section#say-hello
+            %h3 Say Hello
+          
