--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
       #content-wrapper
         %section#content
           = yield
+        #content-footer
       #footer-wrapper
         %footer
           %section#contact
