--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,6 +27,18 @@
         %footer
           %section#contact
             %h3 Contact Us
+            %section#charlottesville
+              %h4 Charlottesville
+              %span#street-1 1110 Market Street East
+              %span#street-2 Suite N
+              %span#city-state-zip Charlottesville, VA 22903
+              %span#email cville@coshx.com
+            %section#boulder
+              %h4 Boulder
+              %span#street-1 3080 Valmont Rd
+              %span#street-2 Suite 280
+              %span#city-state-zip Boulder, CO 80301
+              %span#email boulder@coshx.com
           %section#links
             %h3 Links
           %section#say-hello
