--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -50,3 +50,10 @@ $header-height: 101px;
     font-size: 13px;
     color: $light-gray;
 }
+
+@mixin footer-link-text {
+    @include footer-text;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20px;
+}
