--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -73,6 +73,8 @@ footer {
     #say-hello {
         @include column(6, true);
     }
+    li { margin: 5px 0; }
+    a { @include footer-link-text; }
 }
 
 @include sticky-footer(200px, "#content-wrapper", "#content-footer","#footer-wrapper");
