--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,6 +41,11 @@
               %span#email boulder@coshx.com
           %section#links
             %h3 Links
+            %ul
+              %li=link_to "careers", :careers
+              %li=link_to "news", :news
+              %li=link_to "about", :about
+              %li=link_to "blog", :blog
           %section#say-hello
             %h3 Say Hello
           
