--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
             %section#charlottesville
               %h4 Charlottesville
               %span#street-1 1110 Market Street East
-              %span#street-2 Suite N
+              %span#street-2 Suite N7
               %span#city-state-zip Charlottesville, VA 22903
               %span#email cville@coshx.com
             %section#boulder
