--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1,3 +1,5 @@
+@import "compass/css3";
+@import "compass/layout";
 $blueprint-grid-columns: 24;
 $blueprint-grid-width: 30px;
 $blueprint-grid-margin: 10px;
@@ -42,7 +44,7 @@ $header-height: 101px;
     font-family: Arimo;
     text-transform: uppercase;
     font-size: 18px;
-    color: silver;
+    color: $silver;
 }
 
 @mixin footer-text {
