--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,11 +1,9 @@
 @import "compass/reset";
-@import "compass/css3";
-@import "compass/layout";
 @import "common";
 
 body {
     background: image-url('/assets/background-tile.jpg');
-    background-position: 0px 141px;
+    background-position: 0px 101px;
 }
 
 #canvas {
@@ -15,9 +13,9 @@ body {
 
 #header-wrapper {
     background: image-url('/assets/curve.png') repeat-x;
-    background-position: 0px $header-height;
-    background-color: $gray;
     width: 100%;
+    z-index: 100;
+    position: relative;
 }
 
 header {
@@ -53,6 +51,9 @@ nav {
 
 #content {
     @include centered;
+    margin-top: -40px;
+    position: relative;
+    z-index: 0;
 }
 
 footer {
