--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import "common";
+
+#feature {
+    @include column(16);
+    height: 420px;
+    background: image-url('/assets/feature.jpg');
+}
+
+#blog {
+    @include column(8, true);
+    height: 300px;
+}
