--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -77,6 +77,7 @@ footer {
     }
     li { margin: 5px 0; }
     a { @include footer-link-text; }
+    margin-top: 50px;
 }
 
 @include sticky-footer(200px, "#content-wrapper", "#content-footer","#footer-wrapper");
