--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,13 +32,13 @@
               %span#street-1 1110 Market Street East
               %span#street-2 Suite N7
               %span#city-state-zip Charlottesville, VA 22903
-              %span#email cville@coshx.com
+              %span#email=link_to "info+cville@coshx.com", "mailto:info+cville@coshx.com"
             %section#boulder
               %h4 Boulder
               %span#street-1 3080 Valmont Rd
               %span#street-2 Suite 280
               %span#city-state-zip Boulder, CO 80301
-              %span#email boulder@coshx.com
+              %span#email=link_to "info+boulder@coshx.com", "mailto:info+boulder@coshx.com"
           %section#links
             %h3 Links
             %ul
