--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,23 @@
-%section#feature
+%section#main-feature
   #text-wrapper
     %h2 Feature
 %section#blog
   #text-wrapper
     %h3 From the Blog
-%section#description
+%section#tagline
+  %article
+    We build
+    %em
+      amazing
+    web apps for:
+#features
+  %section#startups
+    %article
+      %h3 Startups
+  %section#enterprise
+    %article
+      %h3 Enterprise
+  %section#you
+    %article
+      #title
+        %h3 You
