--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title Coshx Labs
     %meta{:name => "google-site-verification", :content => "GG9HzTQhQZszRRYo-W_el_Dh1LQs-3SQOuCzZS88FvI"}
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Syncopate"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
