--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -6,6 +6,8 @@ body {
     background-position: 0px 101px;
 }
 
+em { color: $dark-orange; }
+
 #canvas {
     width: 100%;
     height: 100%;
@@ -77,6 +79,7 @@ footer {
     }
     li { margin: 5px 0; }
     a { @include footer-link-text; }
+    #contact a { @include footer-text; }
     margin-top: 50px;
 }
 
