--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,12 +4,12 @@
 
 @import "common";
 
-#feature {
+#main-feature {
     @include column(16);
     height: 420px;
     background: image-url('/assets/feature.jpg');
     h2 {
-        @include feature-text(45px);
+        @include main-feature-text(45px);
     }
     #text-wrapper {
         width: 50px;
@@ -25,7 +25,7 @@
     height: 420px;
 
     h3 {
-        @include feature-text(24px);
+        @include main-feature-text(24px);
     }
 
     #text-wrapper {
@@ -38,3 +38,38 @@
     height: 420px;
     float: right;
 }
+
+#tagline {
+    @include tagline-text;
+    @include column(24);
+    @include last;
+    margin: 30px 0;
+}
+
+#features {
+    section {
+        @include column(8);
+        background-color: $gray;
+        @include opacity(0.7);
+        height: 200px;
+        article {
+            height: 198px;
+        }
+    }
+    #you { @include last; }
+
+    #startups article {
+        border: 1px solid $green;
+        h3 { @include feature-text($green); }
+    }
+    #enterprise article {
+        border: 1px solid $blue;
+        h3 { @include feature-text($blue); }
+    }
+    #you article {
+        border: 1px solid $purple;
+        h3 { @include feature-text($purple); }
+    }
+    #title { @include opacity(1.0)}
+}
+
