--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,10 +14,15 @@
   %section#startups
     %article
       %h3 Startups
+      %p Coshx Labs builds top-notch web applications quickly and will crank out new features as fast as you can dream them up.
+
   %section#enterprise
     %article
       %h3 Enterprise
+      %p As former enterprise employees, we know how difficult it can be to overcome the inertia and drive technical change.  Let us show your colleagues how nicely Rails can fit into your existing enterprise stack.
+
   %section#you
     %article
       #title
         %h3 You
+        %p Our clients love us, and you will too.  Let’s pair up and get that backlog under control.
