--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,7 +19,7 @@
   %section#enterprise
     %article
       %h3 Enterprise
-      %p As former enterprise employees, we know how difficult it can be to overcome the inertia and drive technical change.  Let us show your colleagues how nicely Rails can fit into your existing enterprise stack.
+      %p As former enterprise employees, we know how difficult it can be to overcome institutional inertia and drive technical change.  Let us welcome you to 2011!
 
   %section#you
     %article
