--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,13 +40,12 @@
               %span#street-2 Suite 280
               %span#city-state-zip Boulder, CO 80301
               %span#email=link_to "info+boulder@coshx.com", "mailto:info+boulder@coshx.com"
-          %section#links
-            %h3 Links
-            %ul
-              %li=link_to "careers", :careers
-              %li=link_to "news", :news
-              %li=link_to "about", :about
-              %li=link_to "blog", :blog
-          %section#say-hello
-            %h3 Say Hello
-          
+          %section#careers
+            %h3 Careers
+            %p
+              Interested in working at Coshx?
+              %br
+              Send us an email with your resume and open source contributions:
+            = link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
+
+            
