--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -50,15 +50,17 @@ $header-height: 101px;
 
 @mixin footer-text {
     font-family: Arimo;
-    font-size: 13px;
+    font-size: 14px;
     color: $light-gray;
 }
 
 @mixin footer-link-text {
     @include footer-text;
-    font-weight: bold;
     text-decoration: none;
-    font-size: 20px;
+    font-weight: bold;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 @mixin main-feature-text($size, $spacing) {
