brightens purple text and rounds feature corners

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -11,7 +11,7 @@ $medium-gray: #525357;
 
 $blue: #659dff;
 $green: #afcf45;
-$purple: #94145e;
+$purple: #c64791;
 
 $light-orange: #f47123;
 $dark-orange: #f05325;
