--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,9 @@
 %section#main-feature
   #text-wrapper
-    %h2 Feature
-%section#blog
-  #text-wrapper
-    %h3 From the Blog
+    %h2 Featured Client
+  %article.quote
+    Well done. The new version is everything I had hoped it would be.
+    %span.credit -- Jim Fishkin, Center for Deliberative Democracy (Reframe It Board)
 %section#tagline
   %article
     We build
@@ -26,3 +26,9 @@
       #title
         %h3 You
         %p Our clients love us, and you will too.  Let’s pair up and get that backlog under control.
+-#%section#blog
+-#  .wrapper
+-#    %h3 Blog
+-#    %section#subscribe
+-#      %span Subscribe
+-#
