--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,7 +3,7 @@
     %h2 Featured Client
   %article.quote
     Well done. The new version is everything I had hoped it would be.
-    %span.credit -- Jim Fishkin, Center for Deliberative Democracy (Reframe It Board)
+    %span.credit -- Jim Fishkin, Center for Deliberative Democracy
 %section#tagline
   %article
     We build
