--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,35 +17,32 @@
           %nav
             %ul
               %li=link_to "services", :services
-              %li=link_to "our work", :work
-              %li=link_to "our blog", :blog
+              %li=link_to "portfolio", :portfolio
               %li=link_to "about", :about
+              %li=link_to "blog", :blog
       #content-wrapper
         %section#content
           = yield
         #content-footer
-    #footer-wrapper
-      %footer
-        %section#contact
-          %h3 Contact Us
-          %section#charlottesville
-            %h4 Charlottesville
-            %span#street-1 1110 Market Street East
-            %span#street-2 Suite N7
-            %span#city-state-zip Charlottesville, VA 22903
-            %span#email=link_to "info+cville@coshx.com", "mailto:info+cville@coshx.com"
-          %section#boulder
-            %h4 Boulder
-            %span#street-1 3080 Valmont Rd
-            %span#street-2 Suite 280
-            %span#city-state-zip Boulder, CO 80301
-            %span#email=link_to "info+boulder@coshx.com", "mailto:info+boulder@coshx.com"
-        %section#careers
-          %h3 Careers
-          %p
-            Interested in working at Coshx?
-            %br
-            Send us an email with your resume and open source contributions:
-          = link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
-
-            
+    %footer
+      %section#contact
+        %h3 Contact Us
+        %section#charlottesville
+          %h4 Charlottesville
+          %span#street-1 1110 Market Street East
+          %span#street-2 Suite N7
+          %span#city-state-zip Charlottesville, VA 22903
+          %span#email=link_to "info+cville@coshx.com", "mailto:info+cville@coshx.com"
+        %section#boulder
+          %h4 Boulder
+          %span#street-1 3080 Valmont Rd
+          %span#street-2 Suite 280
+          %span#city-state-zip Boulder, CO 80301
+          %span#email=link_to "info+boulder@coshx.com", "mailto:info+boulder@coshx.com"
+      %section#careers
+        %h3 Careers
+        %p
+          Interested in working at Coshx?
+          %br
+          Send us an email with your resume and open source contributions:
+        = link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
