updates career section text

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,5 +44,5 @@
         %p
           Interested in working at Coshx?
           %br
-          Send us an email with your resume and open source contributions:
+          Shoot us an email showing us what you're interested in, what you've accomplished, and why you want to join our team.
         = link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
