--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,7 +3,7 @@
     %h2 Featured Client
   %article.quote
     Well done. The new version is everything I had hoped it would be.
-    %span.credit -- Jim Fishkin, Center for Deliberative Democracy
+    %span.credit -- Jim Fishkin, Stanford Center for Deliberative Democracy
 %section#tagline
   %article
     We build
@@ -26,9 +26,7 @@
       #title
         %h3 You
         %p Our clients love us, and you will too.  Let’s pair up and get that backlog under control.
--#%section#blog
--#  .wrapper
--#    %h3 Blog
--#    %section#subscribe
--#      %span Subscribe
+
+-#%section#activity-stream
+-#  %h4 Activity Stream
 -#
