home page style tweaks

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -56,6 +56,7 @@ nav {
 #content {
     @include centered;
     margin-top: -40px;
+    padding-bottom: 50px;
     position: relative;
     z-index: 0;
 }
