--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Syncopate"
     = stylesheet_link_tag "application"
+    %link{:rel => "shortcut icon", :href => "logo.ico"}
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
