--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,18 +28,19 @@
     %footer
       %section#contact
         %h3 Contact Us
+        %section#email
+          %h4 Email
+          %span#email=link_to "info@coshx.com", "mailto:info@coshx.com"
         %section#charlottesville
           %h4 Charlottesville
           %span#street-1 1110 Market Street East
           %span#street-2 Suite N7
           %span#city-state-zip Charlottesville, VA 22903
-          %span#email=link_to "info+cville@coshx.com", "mailto:info+cville@coshx.com"
         %section#boulder
           %h4 Boulder
-          %span#street-1 3080 Valmont Rd
+          %span#street-1 3080 Valmont Road
           %span#street-2 Suite 280
           %span#city-state-zip Boulder, CO 80301
-          %span#email=link_to "info+boulder@coshx.com", "mailto:info+boulder@coshx.com"
       %section#careers
         %h3 Careers
         %p
