adds google analytics support
depends on env var GOOGLE_ANALYTICS being set to our GA code

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %link{:rel => "shortcut icon", :href => "logo.ico"}
     = javascript_include_tag "application"
     = csrf_meta_tags
+    = google_analytics_js
   %body
     %section#content-canvas
       #header-wrapper
