--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     %link{:rel => "shortcut icon", :href => "logo.ico"}
     = javascript_include_tag "application"
     = csrf_meta_tags
-    = google_analytics_js
+    = render "layouts/google_analytics"
   %body
     %section#content-canvas
       #header-wrapper
